# 3D_Rendering

./: .gitignore  CMakeLists.txt  main.cpp
mge/: MGEDemo.cpp  MGEDemo.hpp  TerrainScene.cpp  TerrainScene.h
mge/MyClasses/: DayAndNight.cpp  DayAndNight.h  DirectionalLight.cpp  DirectionalLight.h  PointLight.cpp  PointLight.h  SinMove.cpp  SinMove.h  SpotLight.cpp  SpotLight.h
mge/MyClasses/Materials/: ColoredTextureMat.cpp  ColoredTextureMat.h  OceanMat.cpp  OceanMat.h  TerrainMat.cpp  TerrainMat.h
mge/behaviours/: Follow.cpp  Follow.h  KeysBehaviour.cpp  KeysBehaviour.hpp  Mover.cpp  Mover.h  RotateDirection.cpp  RotateDirection.h  RotatingBehaviour.cpp
mge/core/: AbstractGame.cpp  AbstractGame.hpp  Camera.cpp  Camera.hpp  GameObject.cpp  GameObject.hpp  Light.cpp  Light.hpp  Renderer.cpp  Renderer.hpp  World.cpp  World.hpp
mge/materials/: ColorMaterial.cpp  ColorMaterial.hpp
mge/shaders/: clrTexture.fs  clrTexture.vs  terrain.fs  terrain.vs  water.fs  water.vs
mge/util/: DebugHud.cpp  DebugHud.hpp
